# FileScanner

./: README.md  新建文本文档.txt
Debug/: FileScanner.exp  FileScanner.lib
filescanner/: CMakeLists.txt
filescanner/FileScanner/: CMakeLists.txt  FileScanner.cpp  FileScanner.h
filescanner/FileScannerUI/: CMakeLists.txt  MainWindow.cpp  MainWindow.h
